--- a/Sprint4/re.ipynb
+++ b/Sprint4/re.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -32,59 +32,74 @@
     }
    ],
    "source": [
+    "// интерфейсы определяют общие методы и свойства для работы с предприятием, \n",
+    "//поставщиками и сотрудниками соответственно.\n",
     "public interface IEnterprise\n",
     "{\n",
-    "    void AddSupplier(ISupplier supplier);\n",
-    "    void AddEmployee(IEmployee employee);\n",
-    "    List<ISupplier> GetSuppliers();\n",
-    "    decimal CalculateTotalExpenses();\n",
+    "    void AddSupplier(ISupplier supplier);         //Добавляет нового поставщика к предприятию.\n",
+    "    void AddEmployee(IEmployee employee);         //Добавляет нового сотрудника к предприятию.\n",
+    "    List<ISupplier> GetSuppliers();               //Возвращает список всех поставщиков.\n",
+    "    decimal CalculateTotalExpenses();             //Вычисляет общую сумму расходов на услуги поставщиков.\n",
     "}\n",
+    "//ISupplier - это тип параметра, который должен реализовывать интерфейс ISupplier.\n",
+    "//supplier - это имя переменной, которая будет содержать значение переданного аргумента\n",
+    "\n",
     "\n",
     "public interface ISupplier\n",
     "{\n",
-    "    string GetName();\n",
-    "    decimal GetCost();\n",
-    "    SupplierType Type { get; set; }\n",
+    "    string GetName();                     //Возвращает название поставщика.\n",
+    "    decimal GetCost();                    //Возвращает стоимость услуг поставщика.\n",
+    "    SupplierType Type { get; set; }       //Свойство для указания типа поставщика.\n",
     "}\n",
+    "\n",
     "\n",
     "public interface IEmployee\n",
     "{\n",
-    "    string GetFullName();\n",
-    "    decimal GetSalary();\n",
-    "    string Position { get; set; }\n",
+    "    string GetFullName();                  // Возвращает полное имя сотрудника.\n",
+    "    decimal GetSalary();                   //Возвращает зарплату сотрудника.\n",
+    "    string Position { get; set; }          //Свойство для указания должности сотрудника.\n",
     "}\n",
     "\n",
-    "public enum SupplierType\n",
+    "\n",
+    "public enum SupplierType //объявление перечисления (enum)\n",
     "{\n",
     "    Logistics,\n",
     "    OfficeEquipment,\n",
     "    ITEquipment\n",
     "}\n",
-    "public class Enterprise : IEnterprise\n",
-    "{\n",
-    "    public List<ISupplier> _suppliers = new List<ISupplier>();\n",
-    "    public List<IEmployee> _employees = new List<IEmployee>();\n",
+    "//представляют три возможных типа поставщиков.\n",
     "\n",
-    "    public void AddSupplier(ISupplier supplier)\n",
+    "\n",
+    "\n",
+    "public class Enterprise : IEnterprise\n",
+    "{   //generics для типов ISupplier и IEmployee\n",
+    "    public List<ISupplier> _suppliers = new List<ISupplier>();     //для хранения объектов поставщиков (_suppliers)\n",
+    "    public List<IEmployee> _employees = new List<IEmployee>();     //для хранения объектов сотрудников (_employees)\n",
+    "\n",
+    "    public void AddSupplier(ISupplier supplier)                    //добавляет новый поставщика в список _suppliers\n",
     "    {\n",
     "        _suppliers.Add(supplier);\n",
     "    }\n",
     "\n",
-    "    public void AddEmployee(IEmployee employee)\n",
+    "    public void AddEmployee(IEmployee employee)                    //обавления сотрудника в список _employees.\n",
     "    {\n",
     "        _employees.Add(employee);\n",
     "    }\n",
     "\n",
     "    public List<ISupplier> GetSuppliers()\n",
     "    {\n",
-    "        return _suppliers;\n",
+    "        return _suppliers; //возвращает список всех текущих поставщиков. Он просто возвращает внутренний список\n",
     "    }\n",
     "\n",
-    "    public decimal CalculateTotalExpenses()\n",
+    "    public decimal CalculateTotalExpenses()          //вычисляет общую сумму расходов на услуги всех поставщиков.\n",
     "    {\n",
-    "        return _suppliers.Sum(s => s.GetCost());\n",
+    "        return _suppliers.Sum(s => s.GetCost()); \n",
     "    }\n",
     "}\n",
+    "//.Sum(...): Это метод коллекции List<T>\n",
+    "// s - это параметр, который принимает каждый элемент списка _suppliers.\n",
+    "\n",
+    "\n",
     "\n",
     "public class Supplier : ISupplier\n",
     "{\n",
@@ -96,6 +111,8 @@
     "    public decimal GetCost() => Cost;\n",
     "}\n",
     "\n",
+    "\n",
+    "\n",
     "public class Employee : IEmployee\n",
     "{\n",
     "    public string FullName { get; set; }\n",
@@ -105,11 +122,16 @@
     "    public string GetFullName() => FullName;\n",
     "    public decimal GetSalary() => Salary;\n",
     "}\n",
-    "var enterprise = new Enterprise();\n",
     "\n",
+    "\n",
+    "\n",
+    "var enterprise = new Enterprise();\n",
     "// Добавление поставщиков\n",
-    "enterprise.AddSupplier(new Supplier { Name = \"Логистический центр\", Cost = 100000m, Type = SupplierType.Logistics });\n",
+    "enterprise.AddSupplier(new Supplier { Name = \"Логистический центр\", Cost = 100000m, Type = SupplierType.Logistics }); //SupplierType.Logistics указывает тип поставщика как логистического центра\n",
     "enterprise.AddSupplier(new Supplier { Name = \"Поставщик офисной мебели\", Cost = 50000m, Type = SupplierType.OfficeEquipment });\n",
+    "\n",
+    "//enterprise - это экземпляр класса Enterprise. AddSupplier вызывается на этом объекте. new Supplier(...) создает новый объект типа Supplier, который реализует интерфейс ISupplier.\n",
+    "\n",
     "\n",
     "        // Добавление сотрудников\n",
     "enterprise.AddEmployee(new Employee { FullName = \"Иван Иванов\", Salary = 70000m, Position = \"Менеджер\" });\n",
